<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center">

        <TextView
            android:id="@+id/user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login_user"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/user_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/usuario"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login_password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/password"
            android:inputType="textPassword"
            android:textSize="25sp" />
    </LinearLayout>


    <CheckBox
        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_remember"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login_btn_login"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_signin"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
